--- a/app/src/main/res/layout/activity_now_playing.xml
+++ b/app/src/main/res/layout/activity_now_playing.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:background="@drawable/music"
-    tools:context=".NowPlaying">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".NowPlaying"
+    tools:showIn="@layout/activity_now_playing_main">
 
     <TextView
         android:id="@+id/song_name"
