--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.nakulbhoria.musicplayerapp.MainActivity">
+
+    <item
+        android:id="@+id/playlist"
+        android:icon="@drawable/playlist"
+        android:orderInCategory="100"
+        android:title="playlist"
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
